exp/ch: simplify and update aggregate targets

--- a/exp/cahn-hilliard/Makefile
+++ b/exp/cahn-hilliard/Makefile
@@ -2,21 +2,14 @@ define append-dir
 $(patsubst %,$(DATA_DIR)/%,$(1))
 endef
 
-
-$(DATA_DIR)/ch_mapby-core_all.csv: $(call append-dir,$(DATS_CORE))
-$(DATA_DIR)/ch_mapby-core_part.csv: $(wildcard $(DATA_DIR)/ch_*mapby-core.csv)
-#$(DATA_DIR)/ch_mapby-core_%.csv:
-#	sed -n '1p' $< > $@
-#	echo $^ | xargs -n 1 sed -n '2p' | sort -n >> $@
-
-# TODO: aggregation target for PPR (not as easy since ppr value
-# is only in filename, not inside the CSV file)
-$(DATA_DIR)/ch_mapby-ppr-node_all.csv: $(call append-dir,$(DATS_PPR))
-$(DATA_DIR)/ch_mapby-ppr-node_part.csv: $(wildcard $(DATA_DIR)/ch_*mapby-ppr-*-node.csv)
-$(DATA_DIR)/ch_mapby-%.csv:
+# 'all' is for the list of desired artifacts in DATS var
+# 'part' is for whatever '*.csv' files are in the directory
+$(DATA_DIR)/ch_agg_all.csv: $(call append-dir,$(DATS))
+$(DATA_DIR)/ch_agg_part.csv: $(wildcard $(DATA_DIR)/ch_mesh-*.csv)
+$(DATA_DIR)/ch_agg_%.csv:
 	sed -n '1p' $< > $@
 	echo $^ | xargs -n 1 sed -n '2p' | sort -n >> $@
 
-$(DATA_DIR)/ch_mapby-ppr-node_%.pdf \
-$(DATA_DIR)/ch_mapby-ppr-node_%.svg: $(DATA_DIR)/ch_mapby-ppr-node_%.csv
+$(DATA_DIR)/ch_agg_%.pdf \
+$(DATA_DIR)/ch_agg_%.svg: $(DATA_DIR)/ch_agg_%.csv
 	$(if $(IN),,$(EPREFIX)/ptools/pstart) python ../plot.py $< $@
