ptools/summit/make: add the HNP node to job count
This is part of the workaround discussed in the comment in the commit
listed below (and introduced in an earlier commit).

	commit 7c9077fee255fdc2f26ac21d9b5526c03114bded
	Author: Alexei Colin <acolin@isi.edu>
	Date:   Fri Feb 26 10:23:01 2021 -0500

	    ptools/summit/make: update comment re HNP in hostfile

--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -121,11 +121,12 @@ endef
 
 # tgt-nodes(target_name) -> node count (from: ranks/tasks_per_node)
 # +1 extra node for dedicating to rank 0
+# +1 for extra node for NOLOCAL workaround (see comment near hostfile below)
 define tgt-nodes
 $(strip \
   $(if $(DEDI_NODE_FOR_RANK0),\
     $(call calc,\
-      1 + ceil(($(call tgt-extract,ranks,$(1))-1) / \
+      2 + ceil(($(call tgt-extract,ranks,$(1))-1) / \
 	$(call tgt-tasks-per-node,$(1)))),\
     $(call calc,\
       ceil($(call tgt-extract,ranks,$(1)) / $(call tgt-tasks-per-node,$(1))))))
