exp/apps/csp/ch: propagate env vars, drop 'env'

--- a/exp/apps/casper/cahnhilliard/CMakeLists.txt
+++ b/exp/apps/casper/cahnhilliard/CMakeLists.txt
@@ -22,6 +22,5 @@ find_package(Python COMPONENTS Interpreter REQUIRED) # for Python_SITELIB
 add_custom_target(ch.run
   ${CMAKE_COMMAND} -E env
     EXTRA_PYTHONPATH="${CMAKE_CURRENT_SOURCE_DIR}:${CASPER_PYAPI_DIR}:${Python_SITELIB}"
-    mpirun -n $$RANKS ${ch_BUILD_DIR}/ch
-    #${ch_BUILD_DIR}/ch
+    mpirun -x EXTRA_PYTHONPATH -n $$RANKS ${ch_BUILD_DIR}/ch
   DEPENDS ${ch_BUILD_DIR}/ch)
