ptools/summit: use rankfile instead of hostfile
Upstream fixed Issue #720 "Rankfile per prun". It works now
(although I only tested with one prun instance in the DVM).

--- a/exp/cahn-hilliard/summit/Makefile
+++ b/exp/cahn-hilliard/summit/Makefile
@@ -70,7 +70,7 @@ DATS_ch-tpn=\
 $(call target-set,ch-tpn,$(DATS_ch-tpn))
 
 ifneq ($(IN),)
-$(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.hostfile | $(DATA_DIR)/
+$(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.rankfile | $(DATA_DIR)/
 	set -o pipefail; \
 	$(call prun-cmd,$*,$<) \
 	env OMP_NUM_THREADS=$(OMP_NUM_THREADS) \
