exp/ch/make: support setting timesteps in target

--- a/exp/cahn-hilliard/summit/Makefile
+++ b/exp/cahn-hilliard/summit/Makefile
@@ -82,6 +82,8 @@ $(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.rankfile | $(DATA_DIR)/
 		"$(call tgt-tasks-per-node,$*)" \
 		--elapsed-out "$@" \
 		--solution-out "$(patsubst %.csv,%.pvd,$@)" \
+		$(if $(call tgt-extract,steps,$*,1),\
+			--steps "$(call tgt-extract,steps,$*)") \
 		$(if $(call tgt-tasks,$*),--tasks "$(call tgt-tasks,$*)") \
 		$(if $(MEM_PER_NODE),--mem-per-node "$(MEM_PER_NODE)") \
 		$(if $(DEDI_NODE_FOR_RANK0),--dedicated-node-for-rank0) \
