exp/ch: create matplotlib dir
Otherwise, file not found error regarding lock file.

--- a/exp/cahn-hilliard/summit/Makefile
+++ b/exp/cahn-hilliard/summit/Makefile
@@ -73,6 +73,7 @@ $(call target-set,ch-scaling,$(DATS_ch-4k) $(DATS_ch-8k))
 
 ifneq ($(IN),)
 $(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.rankfile | $(DATA_DIR)/
+	mkdir -p "$@.mpl"
 	set -o pipefail; \
 	$(call prun-cmd,$*,$<) \
 	env OMP_NUM_THREADS=$(OMP_NUM_THREADS) \
